--- a/_posts/2016-03-01-个人简历.md
+++ b/_posts/2016-03-01-个人简历.md
@@ -9,6 +9,7 @@ title: 个人简历
 - 邮箱: jsz3@live.com
 - 微信: JohnCx
 - Github: @jiusanzhou
+    - Avid, enthusiastic, computer programming nerd. Hardware hobbyist. Creative minded geek. INTJ.
 - Twitter: @jiusanzhou
 - Site: https://wencai.app
 
@@ -29,6 +30,7 @@ title: 个人简历
   - [×] 智能厨房系统 [IoT, 自动炒菜, 厨房社交]
   - [√] 高空清洁机器人 [四轴, MAVProxy, ArduPilot, BeagleBoard, OpenCV]
 - [2014.04-2015.06] 电路实验室
+  - [√] 设计电路、打板
 
 ### 教育
 
