--- a/_posts/2016-03-01-个人简历.md
+++ b/_posts/2016-03-01-个人简历.md
@@ -9,7 +9,6 @@ title: 个人简历
 - 邮箱: jsz3@live.com
 - 微信: JohnCx
 - Github: @jiusanzhou
-    - Avid, enthusiastic, computer programming nerd. Hardware hobbyist. Creative minded geek. INTJ.
 - Twitter: @jiusanzhou
 - Site: https://wencai.app
 
@@ -35,3 +34,7 @@ title: 个人简历
 ### 教育
 
 - [2011-2015] 本科，机械设计制造及自动化，安徽理工大学
+
+### Bio
+
+- Avid, enthusiastic, computer programming nerd. Hardware hobbyist. Creative minded geek. INTJ.
