--- a/_posts/2016-03-01-个人简历.md
+++ b/_posts/2016-03-01-个人简历.md
@@ -5,9 +5,8 @@ title: 个人简历
 
 ### 联系方式
 
-- 地址: 杭州市
-- 邮箱: jsz3@live.com
-- 微信: JohnCx
+- Email: jsz3@live.com
+- WeChat: JohnCx
 - Github: @jiusanzhou
 - Twitter: @jiusanzhou
 - Site: https://wencai.app
@@ -18,19 +17,31 @@ title: 个人简历
 - 职位: 爬虫开发
 - 入职时间: 2016.03
 
-### 个人信息
-
-- Birth: 1993.09
-- 家乡: 安庆，安徽
-
 ### 经历
 
-- [2016.03-] 杭州，同花顺
-- [2015.07-2016.03] 合肥，智能硬件创业
-  - [×] 智能厨房系统 [IoT, 自动炒菜, 厨房社交]
-  - [√] 高空清洁机器人 [四轴, MAVProxy, ArduPilot, BeagleBoard, OpenCV]
-- [2014.04-2015.06] 电路实验室
-  - [√] 设计电路、制板
+#### [2016.03-] 杭州，同花顺
+
+- [√] 微信抓取 Web版协议研究
+- [√] 微信抓取 Android Hook
+- [:timer_clock:] 配置化爬虫
+
+#### [2015.07-2016.03] 合肥，智能硬件创业
+
+- [×] 智能厨房系统 [IoT, 自动烧菜, 厨房社交]
+  > 1. 设计整体思路
+  > 2. 负责烧菜教学系统的产品原型设计
+- [√] 高空清洁机器人 [四轴飞行, MAVProxy, ArduPilot, BeagleBoard, OpenCV]
+  > 1. 四轴飞行的机械方案
+  > 2. 飞控调研
+  > 3. 飞行器控制台与自助控制逻辑实现
+  > 4. 基于OpenCV的主体轮廓识别与路径规划
+  > 5. 高空楼层飞行器定位修正
+  > 6. 应用方案设计
+
+#### [2014.04-2015.06] 学校，自动化实验室
+
+- [√] 设计电路、制板
+  - [√] 
 
 ### 教育
 
@@ -39,3 +50,8 @@ title: 个人简历
 ### Bio
 
 - Avid, enthusiastic, computer programming nerd. Hardware hobbyist. Creative minded geek. INTJ.
+
+### 个人信息
+
+- Birth: 1993.09
+- 家乡: 安庆，安徽
