:zap: modify content

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -5,187 +5,60 @@ layout: default
 container: MSection
 ---
 
-目前从事[云原生](#)相关的开发工作 👨‍💻 。
-过往的工作经历包含爬虫系统、逆向、硬件电路等。
-平时会用`Golang`，`React` ⚛️  ，`Flutter`和正在学习的`Rust` 🦀 等技术栈来实现自己在工具或平台领域的想法 💡 。
-目前[居住](/)在杭州，中国 🌏 。
+**一个遗失在角落的残缺灵魂。**
 
-Zoe is a designer, full-stack developer 👨‍💻 , and entrepreneur.
-He is the founder of Sonuum & several other ventures.
-Zoe is a designer, full-stack developer 👨‍💻 , and entrepreneur.
+### 寄居者
 
+发现寄居身份是在**被寄居者**(又称「肉身」)约8-9岁的某日。
 
-我使用 `Golang`, `Python`, `Rust`, `JavaScript` 等语言进行开发。
+大约是在其4岁左右，我开始了此次寄居。
 
-http://writry.lofter.com/
+被寄居者生于公元**1993年**中元节后的某日。
+- 其富有怜悯，但生性懦弱；
+- 其力求精进，但缺乏耐心；
+- 其思维活络，但眼高手低。
 
-```golang:title=main.go {2-3}
-import "fmt"
+实在难以「优良肉身」视之。
 
-func main() {
-    fmt.Println("Hello Golang!")
-}
 
-```
+作为寄居者，不曾主导做过任何有价值或成就的事。
+这二十余年，一路都是由着肉身的「**贪**」、「**嗔**」、「**痴**」走来。
+兴许，在余下的年数里，该努力去作出一些改变，
 
-https://excalidraw.com/#json=5695519967936512,sLhjTgn1_wB1iVLLquX6Fg
+> 我存在，因我存在而存在。
 
-> 有些人说的情况可能是如下的可能。
+理应，让众生感知我的存在。又或，因缘不对，碌碌无为而终，这便随它去好了。
 
-<Alert status="success" my="1em">
-  <AlertIcon />
-  <AlertTitle mr={2}>Your browser is outdated!</AlertTitle>
-  <AlertDescription>
-    Your Chakra experience may be degraded.
-  </AlertDescription>
-</Alert>
+### 与「我」联系
 
+下面的名片上有「我」所能提供的所有联系方式，在非必要情况下，还请勿扰。
 
+<AuthorCard
+    mt="2rem"
+    border="1px"
+    borderColor="gray.200"
+    maxW="sm" p="1rem" rounded="1rem" />
 
-![图](https://img.bmpi.dev/4a2498bf-5dc8-b650-1219-b943f6851c1e.png)
+### 站点说明
 
----
+本站信息均有「我」提供。
 
-# Welcome to StackEdit!
+本站第一人称的「我」并不特指肉身或寄居者，在大多情况下是指的两者的「共生体」，如有特指，会作说明。
 
-Hi! I'm your first Markdown file in **StackEdit**. If you want to learn about StackEdit, you can read me. If you want to play with Markdown, you can edit me. Once you have finished with me, you can create new files by opening the **file explorer** on the left corner of the navigation bar.
 
+本站并非第一个内容提供处，也绝非最后一个。
+在其完全提供服务之前，已尽最大的可能迁移历史内容，但一定存在遗失或不完全之处，不做任何历史内容的保证。
 
-# Files
 
-StackEdit stores your files in your browser, which means all your files are automatically saved locally and are accessible **offline!**
 
-## Create files and folders
+### 依赖与感谢
 
-The file explorer is accessible using the button in left corner of the navigation bar. You can create a new file by clicking the **New file** button in the file explorer. You can also create folders by clicking the **New folder** button.
+本站点能够被访问，完全离不开下列工具与服务的支持，
 
-## Switch to another file
+- [Gatsby](https://gatsbyjs.com): 静态站点生成工具
+- [gatsby-starter-zoe-app](https://github.com/jiusanzhou/gatsby-starter-zoe-app): 站点模板和主题
+- [Netlify](https://netlify.com): 实时构建与静态文件托管
+- [Cloudflare](https://cloudflare.com): 域名解析与CDN加速
+- [Github](https://github.com): 原始数据/代码托管
 
-All your files and folders are presented as a tree in the file explorer. You can switch from one to another by clicking a file in the tree.
-
-## Rename a file
-
-You can rename the current file by clicking the file name in the navigation bar or by clicking the **Rename** button in the file explorer.
-
-## Delete a file
-
-You can delete the current file by clicking the **Remove** button in the file explorer. The file will be moved into the **Trash** folder and automatically deleted after 7 days of inactivity.
-
-## Export a file
-
-You can export the current file by clicking **Export to disk** in the menu. You can choose to export the file as plain Markdown, as HTML using a Handlebars template or as a PDF.
-
-
-# Synchronization
-
-Synchronization is one of the biggest features of StackEdit. It enables you to synchronize any file in your workspace with other files stored in your **Google Drive**, your **Dropbox** and your **GitHub** accounts. This allows you to keep writing on other devices, collaborate with people you share the file with, integrate easily into your workflow... The synchronization mechanism takes place every minute in the background, downloading, merging, and uploading file modifications.
-
-There are two types of synchronization and they can complement each other:
-
-- The workspace synchronization will sync all your files, folders and settings automatically. This will allow you to fetch your workspace on any other device.
-	> To start syncing your workspace, just sign in with Google in the menu.
-
-- The file synchronization will keep one file of the workspace synced with one or multiple files in **Google Drive**, **Dropbox** or **GitHub**.
-	> Before starting to sync files, you must link an account in the **Synchronize** sub-menu.
-
-## Open a file
-
-You can open a file from **Google Drive**, **Dropbox** or **GitHub** by opening the **Synchronize** sub-menu and clicking **Open from**. Once opened in the workspace, any modification in the file will be automatically synced.
-
-## Save a file
-
-You can save any file of the workspace to **Google Drive**, **Dropbox** or **GitHub** by opening the **Synchronize** sub-menu and clicking **Save on**. Even if a file in the workspace is already synced, you can save it to another location. StackEdit can sync one file with multiple locations and accounts.
-
-## Synchronize a file
-
-Once your file is linked to a synchronized location, StackEdit will periodically synchronize it by downloading/uploading any modification. A merge will be performed if necessary and conflicts will be resolved.
-
-If you just have modified your file and you want to force syncing, click the **Synchronize now** button in the navigation bar.
-
-> **Note:** The **Synchronize now** button is disabled if you have no file to synchronize.
-
-## Manage file synchronization
-
-Since one file can be synced with multiple locations, you can list and manage synchronized locations by clicking **File synchronization** in the **Synchronize** sub-menu. This allows you to list and remove synchronized locations that are linked to your file.
-
-
-# Publication
-
-Publishing in StackEdit makes it simple for you to publish online your files. Once you're happy with a file, you can publish it to different hosting platforms like **Blogger**, **Dropbox**, **Gist**, **GitHub**, **Google Drive**, **WordPress** and **Zendesk**. With [Handlebars templates](http://handlebarsjs.com/), you have full control over what you export.
-
-> Before starting to publish, you must link an account in the **Publish** sub-menu.
-
-## Publish a File
-
-You can publish your file by opening the **Publish** sub-menu and by clicking **Publish to**. For some locations, you can choose between the following formats:
-
-- Markdown: publish the Markdown text on a website that can interpret it (**GitHub** for instance),
-- HTML: publish the file converted to HTML via a Handlebars template (on a blog for example).
-
-## Update a publication
-
-After publishing, StackEdit keeps your file linked to that publication which makes it easy for you to re-publish it. Once you have modified your file and you want to update your publication, click on the **Publish now** button in the navigation bar.
-
-> **Note:** The **Publish now** button is disabled if your file has not been published yet.
-
-## Manage file publication
-
-Since one file can be published to multiple locations, you can list and manage publish locations by clicking **File publication** in the **Publish** sub-menu. This allows you to list and remove publication locations that are linked to your file.
-
-
-# Markdown extensions
-
-StackEdit extends the standard Markdown syntax by adding extra **Markdown extensions**, providing you with some nice features.
-
-> **ProTip:** You can disable any **Markdown extension** in the **File properties** dialog.
-
-
-## SmartyPants
-
-SmartyPants converts ASCII punctuation characters into "smart" typographic punctuation HTML entities. For example:
-
-|                |ASCII                          |HTML                         |
-|----------------|-------------------------------|-----------------------------|
-|Single backticks|`'Isn't this fun?'`            |'Isn't this fun?'            |
-|Quotes          |`"Isn't this fun?"`            |"Isn't this fun?"            |
-|Dashes          |`-- is en-dash, --- is em-dash`|-- is en-dash, --- is em-dash|
-
-
-## KaTeX
-
-You can render LaTeX mathematical expressions using [KaTeX](https://khan.github.io/KaTeX/):
-
-The *Gamma function* satisfying $\Gamma(n) = (n-1)!\quad\forall n\in\mathbb N$ is via the Euler integral
-
-$$
-\Gamma(z) = \int_0^\infty t^{z-1}e^{-t}dt\,.
-$$
-
-> You can find more information about **LaTeX** mathematical expressions [here](http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference).
-
-
-## UML diagrams
-
-You can render UML diagrams using [Mermaid](https://mermaidjs.github.io/). For example, this will produce a sequence diagram:
-
-```mermaid
-sequenceDiagram
-Alice ->> Bob: Hello Bob, how are you?
-Bob-->>John: How about you John?
-Bob--x Alice: I am good thanks!
-Bob-x John: I am good thanks!
-Note right of John: Bob thinks a long<br/>long time, so long<br/>that the text does<br/>not fit on a row.
-
-Bob-->Alice: Checking with John...
-Alice->John: Yes... John, how are you?
-```
-
-And this will produce a flow chart:
-
-```mermaid
-graph LR
-A[Square Rect] -- Link text --> B((Circle))
-A --> C(Round Rect)
-B --> D{Rhombus}
-C --> D
-```
+在此表示诚挚的谢意。
