:tada: change content of about

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -5,9 +5,30 @@ layout: default
 container: MSection
 ---
 
-**一个遗失在角落的残缺灵魂。**
+### 关于「我」
+
+一名野生开发者🧑🏼‍💻，目前的工作方向是云原生☁️与容器技术🐬。
+
+主要技术栈：
+- 🐭 Golang
+- 🐍 Python
+- ⚛️ React
+
+目前正在学习：
+- 🐬 Kubernetes
+- 🦀 Rust
+
+下面的名片上有「我」所能提供的所有联系方式，在非必要情况下，还请勿扰。
+
+<AuthorCard
+    mt="2rem"
+    border="1px"
+    borderColor="gray.200"
+    maxW="sm" p="1rem" rounded="1rem" />
 
 ### 寄居者
+
+**一个遗失在角落的残缺灵魂。**
 
 发现寄居身份是在**被寄居者**(又称「肉身」)约8-9岁的某日。
 
@@ -28,16 +49,6 @@ container: MSection
 > 我存在，因我存在而存在。
 
 理应，让众生感知我的存在。又或，因缘不对，碌碌无为而终，这便随它去好了。
-
-### 与「我」联系
-
-下面的名片上有「我」所能提供的所有联系方式，在非必要情况下，还请勿扰。
-
-<AuthorCard
-    mt="2rem"
-    border="1px"
-    borderColor="gray.200"
-    maxW="sm" p="1rem" rounded="1rem" />
 
 ### 站点说明
 
