:zap: add gray mode

--- a/content/pages/projects.mdx
+++ b/content/pages/projects.mdx
@@ -6,6 +6,6 @@ layout: default
 
 <MSection title="实验项目" description="每一个创意和想法都需要去实践">
 
-<ProjectsList />
+<ProjectsList itemProps={{leading=null}} />
 
 </MSection>
