--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -5,9 +5,8 @@ title: "Zoe的主页"
 
 <MSection title="👋 Hey, 我是 Zoe !">
 
-目前从事[容器相关的开发工作 👨‍💻](/about) 。
-过往的工作经历包含爬虫系统、逆向、硬件电路等。
-平时会用`Golang`，`React` ⚛️  ，`Flutter`和正在学习的`Rust` 🦀 
+目前从事[容器相关🐬的开发工作 👨‍💻](/about) 。
+平时会用`Golang` 🐭，`React` ⚛️  ，`Flutter`和正在学习的`Rust` 🦀 
 等技术栈来实现自己在[工具或平台领域的想法 💡 ](/about)。
 目前[居住在杭州，中国 🌏](/about) 。
 
@@ -32,7 +31,7 @@ title: "Zoe的主页"
 
 <MSection title="实验项目" description="每一个创意和想法都需要去实践">
 
-<ProjectsList preview />
+<ProjectsList itemProps={{leading=null}} preview />
 
 </MSection>
 
@@ -40,7 +39,7 @@ title: "Zoe的主页"
 
 <MSection title="博客文章" description="写作是一种自我学习的方式">
 
-<PostsList />
+<PostsList itemProps={{leading=null}} />
 
 </MSection>
 
