--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -31,7 +31,7 @@ title: "Zoe的主页"
 
 <MSection title="实验项目" description="每一个创意和想法都需要去实践">
 
-<ProjectsList itemProps={{leading=null}} preview />
+<ProjectsList itemProps={{leading: null}} preview />
 
 </MSection>
 
@@ -39,7 +39,7 @@ title: "Zoe的主页"
 
 <MSection title="博客文章" description="写作是一种自我学习的方式">
 
-<PostsList itemProps={{leading=null}} />
+<PostsList itemProps={{leading: null}} />
 
 </MSection>
 
