--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -3,7 +3,7 @@ slug: "/"
 title: "Zoe的主页"
 ---
 
-<MSection title="👋 Hey, 我是 Zoe !">
+<MSection title="👋 Hey, 我是周筱鲁!">
 
 目前从事[容器相关🐬的开发工作 👨‍💻](/about) 。
 平时会用`Golang` 🐭，`React` ⚛️  ，`Flutter`和正在学习的`Rust` 🦀 
