:balloon: fix typo

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -15,7 +15,6 @@ container: MSection
 - ⚛️ React
 
 目前正在学习：
-- 🐬 Kubernetes
 - 🦀 Rust
 
 下面的名片上有「我」所能提供的所有联系方式，在非必要情况下，还请勿扰。
@@ -52,7 +51,7 @@ container: MSection
 
 ### 站点说明
 
-本站信息均有「我」提供。
+本站信息均由「我」提供。
 
 本站第一人称的「我」并不特指肉身或寄居者，在大多情况下是指的两者的「共生体」，如有特指，会作说明。
 
