--- a/content/posts/我的博客起源.md
+++ b/content/posts/我的博客起源.md
@@ -69,5 +69,5 @@ published: true
 ### 后续计划
 
 一直希望一款工具能够结合 [StackEdit](https://stackedit.io/) 的存储方式和
-Notion 的Block编辑方式，我开启了项目[Motion](https://github.com/jiusanzhou/motion)，不过一直都没有实现，觉得自己的设计和技术水平达不到。
+Notion 的Block编辑方式，我开启了项目[Motion](https://github.com/jiusanzhou/motion)，不过由于种种原因一直都没有开始去实现。
 
