--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -13,7 +13,8 @@ title: "Zoe的主页"
 </MSection>
 
 
-<MSection title="理念" position="left" description="始终相信并致力于推动">
+<MSection wraperProps={{bg: useColorModeValue("gray.50", "gray.700")}}
+          title="理念" position="left" description="始终相信并致力于推动">
 
 <Box>
 
